--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     name: Start Building...
-    runs-on: windows-latesat
+    runs-on: windows-latest
     timeout-minutes: 9999
     
     steps:
